fixed contrast problem (black font on blue buttons)

--- a/prototype/static/css/neonion.css
+++ b/prototype/static/css/neonion.css
@@ -337,7 +337,7 @@ dialog#dialog-import + .backdrop {
 
 .btn-blue{
   background: #00ADE8;
-  color: rgba(0, 0, 0, 1);
+  /*color: rgba(0, 0, 0, 1);*/
   border-radius: 10px;
   border-color: #8E8E93;
 }
